overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-node
  namespace: simple-node
spec:
  selector:
    matchLabels:
      app: simple-node
  template:
    metadata:
      labels:
        app: simple-node
        deployment: simple-node
    spec:
      containers:
      - name: simple-node
        image: quay.io/rh_ee_tavelino/quarkusapp:latest
