overlays/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simple-node
  namespace: simple-node
  labels:
    app: simple-node
    app.kubernetes.io/component: simple-node
    app.kubernetes.io/instance: simple-node
    app.kubernetes.io/name: simple-node
    app.kubernetes.io/part-of: simple-node
spec:
  host: simple-node-simple-node.apps.tiago-cluster.sandbox2099
  to:
    kind: Service
    name: simple-node
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
